2004-01-20  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* moved model definitions from doc/UML2.gaphor to
	gaphor/UML/uml2.gaphor.
	* setup.py: updated.
	* utils/install_mo.py: fixed some path related stuff so we can do a
	bdist now.
	* utils/genUML2.py: updated to reflect latest changes in the model.

2004-01-18  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/diagramitem.py: fixed loading.
	* gaphor/diagram/comment.py, association.py, classifier.py,
	feature.py: disable markup for text.

2003-12-31  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/UML/umllex.py: Added parser and renderer for association
	ends.
	* gaphor/diagram/association.py: use the association end parser.

2003-12-05  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/storage.py: Store data in new format (see doc/xml-format.txt)
	* gaphor/parser.py: New data is parsed. utils/genUML2.py and
	gaphor/UML/element.py should be altered.

2003-11-26  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/UML/umllex.py: fixed some stuff.

2003-11-24  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/ui/consolewindow.py: new file. Adds a GtkInterpreterConsole
	to gaphor.
	* gaphor/ui/command/mainpy, data/gaphor-main-ui.xml: added entry
	for console.

2003-11-03  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/__init__.py: remove class Gaphor, instead just defined some
	modules. the function resource(r) works also for version, name, etc.
	* gaphor/diagram/klass.py: fixes and cleanup for attribute/operation
	add/remove functionality.

2003-09-25  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* setup.py: Changed. the datadir is now added to gaphor/version.py.
	* gaphor/__init__.py: changed to use new data_dir location.

2003-09-20  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/association.py: made multiplicity work again.
	* setup.py: bumped version to 0.3.0

2003-09-01  Arjan Molenaar  <arjanmolenaar@hetnet.nl>
